@@ -14,7 +14,9 @@ import net.minecraft.nbt.NbtElement;
 import net.minecraft.nbt.NbtList;
 import net.minecraft.predicate.BlockPredicate;
 import net.minecraft.registry.Registries;
+import net.minecraft.registry.RegistryKeys;
 import net.minecraft.registry.entry.RegistryEntry;
+import net.minecraft.registry.tag.EnchantmentTags;
 import net.minecraft.registry.tag.TagKey;
 import net.minecraft.text.MutableText;
 import net.minecraft.text.Style;
@@ -114,7 +116,7 @@ public class ItemStackHelper extends BaseHelper<ItemStack> {
         List<EnchantmentHelper> enchantments = new ArrayList<>();
         ItemEnchantmentsComponent lv = base.getOrDefault(DataComponentTypes.ENCHANTMENTS, ItemEnchantmentsComponent.DEFAULT);
         for (RegistryEntry<Enchantment> enchantment : lv.getEnchantments()) {
-            enchantments.add(new EnchantmentHelper(enchantment.value(), lv.getLevel(enchantment.value())));
+            enchantments.add(new EnchantmentHelper(enchantment, lv.getLevel(enchantment)));
         }
         return enchantments;
     }
@@ -168,7 +170,9 @@ public class ItemStackHelper extends BaseHelper<ItemStack> {
      * @since 1.8.4
      */
     public List<EnchantmentHelper> getPossibleEnchantments() {
-        return Registries.ENCHANTMENT.stream().filter(enchantment -> enchantment.isAcceptableItem(base)).map(EnchantmentHelper::new).collect(Collectors.toList());
+        return mc.getNetworkHandler().getRegistryManager().get(RegistryKeys.ENCHANTMENT).streamEntries()
+            .filter(enchantment -> enchantment.value().isAcceptableItem(base))
+            .map(EnchantmentHelper::new).toList();
     }
 
     /**
@@ -176,7 +180,11 @@ public class ItemStackHelper extends BaseHelper<ItemStack> {
      * @since 1.8.4
      */
     public List<EnchantmentHelper> getPossibleEnchantmentsFromTable() {
-        return Registries.ENCHANTMENT.stream().filter(enchantment -> enchantment.isAcceptableItem(base) && !enchantment.isCursed() && !enchantment.isTreasure()).map(EnchantmentHelper::new).collect(Collectors.toList());
+        return mc.getNetworkHandler().getRegistryManager().get(RegistryKeys.ENCHANTMENT).getEntryList(EnchantmentTags.IN_ENCHANTING_TABLE)
+            .map(registryEntries -> registryEntries.stream()
+                .filter(enchantment -> enchantment.value().isAcceptableItem(base))
+                .map(EnchantmentHelper::new).toList())
+            .orElse(Collections.emptyList());
     }
 
     /**
@@ -445,7 +453,7 @@ public class ItemStackHelper extends BaseHelper<ItemStack> {
      * @since 1.6.5
      */
     public float getCooldownProgress() {
-        return mc.player.getItemCooldownManager().getCooldownProgress(base.getItem(), mc.getTickDelta());
+        return mc.player.getItemCooldownManager().getCooldownProgress(base.getItem(), mc.getRenderTickCounter().getTickDelta(false));
     }
 
     /**
